# elkhound

./: CMakeLists.txt  CMakeSettings.json  README.md
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  agrampar.cc  agrampar.y  ast.ast  ast.ast.cc  ast.ast.h  astgen.cc  asthelp.cc  asthelp.h  ccsstr.cc  embedded.h  gramlex.cc  gramlex.h  locstr.cc  locstr.h  reporterr.cc  strtable.cc  strtable.h  xmlhelp.cc
src/ast/test/: CMakeLists.txt  astgen_bootstrap.cmake
src/elkhound/: CMakeLists.txt  asockind.cc  cdecl2.gr  emitcode.cc  emitcode.h  flatutil.h  genml.cc  glr.cc  glr.h  gramanl.cc  gramanl.h  gramast.ast  gramexpl.cc  gramlex.lex  grammar.cc  grammar.h  grampar.cc  grampar.h  grampar.y  mlsstr.cc  mlsstr.h  parsetables.cc  parsetables.h  ptreeact.cc  ptreenode.cc  rcptr.h  trcptr.cc  trivbison.cc  trivlex.cc  useract.cc
src/elkhound/c/: CMakeLists.txt  c.ast  c.gr  c_env.cc  c_env.h  c_type.cc  c_type.h  c_variable.cc  c_variable.h  cc_flags.cc  cparse.cc  cparse.h  exprequal.cc  exprvisit.cc  lexer1.cc  lexer1.h  lexer1.lex  lexer2.cc  lexer2.h  paths.cc  paths.h  postorder.cc  stubs.cc  tcheck.cc
src/elkhound/c.in/: CMakeLists.txt
src/elkhound/cc2/: CMakeLists.txt
src/elkhound/examples/arith/: CMakeLists.txt  arith.cc
src/elkhound/examples/cdecl/: CMakeLists.txt  cdecl.gr
src/elkhound/examples/cexp/: CMakeLists.txt  cexp3ast.ast
src/elkhound/examples/gcom/: CMakeLists.txt  eval.cc  eval.h  gcom.ast  lexer.cc
src/elkhound/examples/gcom1/: CMakeLists.txt  lexer.cc
src/elkhound/examples/gcom4/: CMakeLists.txt  lexer.cc
src/elkhound/examples/gcom5/: CMakeLists.txt  gcom.gr
src/elkhound/examples/gcom7/: CMakeLists.txt  eval.cc  eval.h  gcom.ast
src/elkhound/examples/scannerless/: CMakeLists.txt  main.cc
src/elkhound/in/: cc.in6
src/elkhound/ocaml/: CMakeLists.txt
src/elkhound/ocaml/occ2/: CMakeLists.txt
src/elkhound/triv/: AdB.gr.in  CMakeLists.txt
src/smbase/: CMakeLists.txt  README.md  algo.h  allocstats.h  array.h  astlist.h  autofile.cc  autofile.h  bflatten.cc  bflatten.h  bit2d.cc  bit2d.h  bitarray.cc  bitarray.h  exc.cpp  exc.h  flatten.cc  flatten.h  format.h  hashline.cc  hashline.h  hashtbl.h  macros.h  nonport.cpp  nonport.h  objpool.h  owner.h  point.h  restorer.h  srcloc.cc  srcloc.h  srcloc.test.cc  stack.h  str.cpp  str.h  strdict.cc  strdict.h  strhash.cc  strhash.h  string.txt  (+15 more)
src/smbase/attic/: bitarray.cc  bitarray.h
src/smbase/test/: CMakeLists.txt
